# gpuLab

./: .gitignore  .gitignore.orig  CppProperties.json  ReadMe.md
.metadata/.plugins/org.eclipse.cdt.core/: language.settings.xml
.metadata/.plugins/org.eclipse.cdt.make.core/: OpenCLExercise3_Sobel.sc
OpenCLExercise1_Basics/: .cproject  CMakeLists.txt
OpenCLExercise1_Basics/Debug/: OpenCLExercise1_Basics
OpenCLExercise1_Basics/src/: OpenCLExercise1_Basics.cl  OpenCLExercise1_Basics.cpp
OpenCLExercise3_Sobel/: .cproject  OpenCLExercise3_Sobel Debug.launch
OpenCLExercise3_Sobel/Debug/: OpenCLExercise3_Sobel  makefile
OpenCLExercise3_Sobel/Release/: OpenCLExercise3_Sobel
OpenCLExercise3_Sobel/src/: OpenCLExercise3_Sobel.cl  OpenCLExercise3_Sobel.cpp
OpenCLExercise4_MatrixMultiplication/: .cproject  .project  OpenCLExercise4_MatrixMultiplication Debug.launch  OpenCLExercise4_MatrixMultiplication Release.launch
OpenCLExercise4_MatrixMultiplication/Debug/: OpenCLExercise4_MatrixMultiplication  makefile  objects.mk
OpenCLExercise4_MatrixMultiplication/src/: OpenCLExercise4_MatrixMultiplication.cl  OpenCLExercise4_MatrixMultiplication.cpp
OpenCLExercise5_VolumeRendering/: .cproject  .project  CMakeLists.txt  OpenCLExercise5_VolumeRendering Debug.launch  OpenCLExercise5_VolumeRendering Release.launch  lena.pgm  output_CannyEdge.pgm  output_GaussSmoothed.pgm  output_Gradient.pgm  output_NonMaxSup.pgm
OpenCLExercise5_VolumeRendering/Debug/: makefile  objects.mk
OpenCLExercise5_VolumeRendering/src/: OpenCLExercise5_VolumeRendering.cl  OpenCLExercise5_VolumeRendering.cpp  OpenGlRenderer.h
OpenCLExercise6_PrefixSum/: .cproject  .project  OpenCLExercise6_PrefixSum Debug.launch  OpenCLExercise6_PrefixSum Release.launch
OpenCLExercise6_PrefixSum/Debug/: OpenCLExercise6_PrefixSum  makefile
OpenCLExercise6_PrefixSum/src/: OpenCLExercise6_PrefixSum.cl  OpenCLExercise6_PrefixSum.cpp
Project/: CMakeLists.txt  CMakeSettings.json  OpenCLExercise1_Basics Debug.launch  OpenCLExercise5_VolumeRendering Debug.launch  Unbenannt.pgm  ValveR.pgm  city.pgm  output_CannyEdge.pgm  output_GaussSmoothed.pgm  output_Gauss_CPU.pgm  output_Gradient.pgm  output_NonMaxSup.pgm  output_NonMaxSup_CPU.pgm  output_sobel_cpu.pgm
Project/ADMM_Optimization/Release/Math/: subdir.mk
Project/ADMM_Optimization/src/: Kernel.cl  main.cpp  makefile
Project/Debug/: makefile  sources.mk
Project/Debug/lib/Core/: Assert.d  CheckedCast.d  Error.d  Exception.d  Image.d  Memory.d  NumericException.d  StrError.d  Time.d  TimeSpan.d  Type.d  WindowsError.d  subdir.mk
Project/Debug/lib/OpenCL/: Device.d  Error.d  Event.d  GetError.d  Program.d  subdir.mk
Project/Debug/src/: CPUImplementation.d  GpuImplementation.d  OpenGlRenderer.d  main.d  subdir.mk
Project/MTF/: Readme
Project/src/: CPUImplementation.cpp  CPUImplementation.h  GpuImplementation.cpp  GpuImplementation.h  OpenGlRenderer.cpp  OpenGlRenderer.h  int2.h  kernel.cl  main.cpp  main.cpp.orig
Project2/: CMakeCache.txt  CMakeLists.txt  output_CannyEdge_CPU.pgm  output_Gradient_CPU.pgm  output_NonMaxSup.pgm  street.pgm  test.pgm
Project2/Debug/: sources.mk
Project2/src/: CPUImplementation.cpp  CPUImplementation.h  main.cpp
(+218 files in other folders)
